initial existing content

--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,7 +1,22 @@
 <ul>
-    $for(posts)$
-        <li>
-            <a href="$url$">$title$</a> - $date$
-        </li>
-    $endfor$
+  $for(posts)$
+    <li>
+      <a href="$url$">$title$</a> - $date$
+    </li>
+  $endfor$
+  <li>
+    <a href="http://sfultong.blogspot.com/2016/12/a-better-model-of-computation.html?m=1">
+      A Better Model of Computation by sfultong
+    </a>
+  </li>
+  <li>
+    <a href="http://sfultong.blogspot.com/2017/09/sil-explorations-in-non-turing.html?m=1">
+      SIL: Explorations in non-Turing Completeness by sfultong
+    </a>
+  </li>
+  <li>
+    <a href="http://sfultong.blogspot.com/2018/04/deconstructing-lambdas-closures-and.html?m=1">
+      Deconstructing Lambdas, Closures and Application by sfultong
+    </a>
+  </li>
 </ul>
