--- a/templates/default.html
+++ b/templates/default.html
@@ -4,14 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>SIL $title$</title>
+        <title>Telomare $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="/">Stand-In-Language</a>
+                <a href="/">Telomare</a>
             </div>
             <div id="navigation">
                 <a href="/quickstart.html">QuickStart</a>
